Small java compile patch #2